Update and rename BUCKWHEAT MINDS.html to index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<!-- saved from url=(0022)http://sobakun.gq/?i=1 -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		
+<html>
+	<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <link rel="icon" href="http://sobakun.gq/assets/img/favicon.svg">
         <link rel="icon" href="http://sobakun.gq/assets/img/favicon.png">
         <link rel="icon" href="http://sobakun.gq/assets/img/favicon.ico">
