--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 		<meta name="viewport" content="width=device-width initial-scale=.85">
         <meta name="yandex-verification" content="a4749a5df4a718e4" />
         <meta name="description" content="index"/>
-        <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+        <script src="https://code.jquery.com/jquery-3.6.1.js"
+  	integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI="
+  	crossorigin="anonymous"></script>
         <script src="scr1.js"></script>
         <meta name="title" content="BUCKWHEAT MINDS">
 		<meta name="description" content="𝒄𝒍𝒊𝒄𝒌 𝒎𝒆 𝒕𝒐 𝒔𝒆𝒆 𝒄𝒐𝒏𝒕𝒆𝒏𝒕">
