Update and rename xn.htm to xn.html

--- a/ruthenia/xn.html
+++ b/ruthenia/xn.html
@@ -3,6 +3,6 @@
     <title>RPUEXXXL81I</title>
     <body>
     <meta name="description" content="xdinnxidnxidnxdinxdinxdinxdixdnxdinxidnind"/>
-    <meta http-equiv="refresh" content="1 url=https://sobakun.gq/assets/img/dxni.png">
+    <meta http-equiv="refresh" content="1 url=assets/img/dxni.png">
     </body>
 </html>
