--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <!-- 
-IN DEVEPLOPMENT CONSTRUCTION, PLEASE BE PATIENT!
   /\  /\
  |  ||  |
  |      |
@@ -15,19 +14,19 @@ IN DEVEPLOPMENT CONSTRUCTION, PLEASE BE PATIENT!
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <link rel="icon" href="assets/img/favicon.svg">
-        <link rel="icon" href="assets/img/favicon.png">
-        <link rel="icon" href="assets/img/favicon.ico">
+		<link rel="icon" href="assets/img/favicon.svg">
+		<link rel="icon" href="assets/img/favicon.png">
+		<link rel="icon" href="assets/img/favicon.ico">
 		<title>BUCKWHEAT MINDS</title>
 		<link rel="stylesheet" href="assets/misc/style.css">
 		<meta name="viewport" content="width=device-width initial-scale=.85">
-        <meta name="yandex-verification" content="a4749a5df4a718e4" />
-        <meta name="description" content="index"/>
-        <script src="https://code.jquery.com/jquery-3.6.1.js"
-  	integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI="
-  	crossorigin="anonymous"></script>
-        <script src="scr1.js"></script>
-        <meta name="title" content="BUCKWHEAT MINDS">
+		<meta name="yandex-verification" content="a4749a5df4a718e4" />
+		<meta name="description" content="index"/>
+		<script src="https://code.jquery.com/jquery-3.6.1.js"
+		integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI="
+		crossorigin="anonymous"></script>
+		<script src="scr1.js"></script>
+		<meta name="title" content="BUCKWHEAT MINDS">
 		<meta name="description" content="𝒄𝒍𝒊𝒄𝒌 𝒎𝒆 𝒕𝒐 𝒔𝒆𝒆 𝒄𝒐𝒏𝒕𝒆𝒏𝒕">
 		<meta name="url" content="https://sobakun.gq">
 		<meta name="image" content="assets/img/cover.jpg">
@@ -52,18 +51,18 @@ IN DEVEPLOPMENT CONSTRUCTION, PLEASE BE PATIENT!
 				<hr>
 				</header>
 				<div class="subtitle">
-				<big><a href="https://tx.me/kisoqual">РіСЂ</a><a href="https://t.me/kisoqual">РµС‡</a><a href="https://vk.com/kisoqual">ёСЃР</a><a href="https://soundcloud.com/kisoqual">РЅР</a><a href="https://kisoqual.bandcamp.com">РЅР</a><a href="https://twitter.com/buckwheatdata">µРІС</a><a href="https://fb.com/kisoqual">Р№</a><a href="https://youtube.com/c/kisoqual">’Р</a><a href="https://twitch.tv/underscoresoba">’Р</a><a href="https://coub.com/kitsuneknowledge">’Р</a><a href="https://flickr.com/sobacore/">РіСЂ</a><a href="https://instagram.com/buckwheatdata">РіСЂ</a><a href="portfolio">»РЅР°</a><a href="mailto:will@sobakun.gq">Р»Р</a><a href="mailto:buckwheatdata@hotmail.com">ѕР</a></big>
+				<big><a href="https://tx.me/kisoqual">РіСЂ</a><a href="https://t.me/kisoqual">РµС‡</a><a href="https://vk.com/kisoqual">ёСЃР</a><a href="https://soundcloud.com/kisoqual">РЅР</a><a href="https://kisoqual.bandcamp.com">РЅР</a><a href="https://twitter.com/buckwheatdata">µРІС</a><a href="https://fb.com/kisoqual">Р№</a><a href="https://youtube.com/c/kisoqual">’Р</a><a href="https://twitch.tv/underscoresoba">’Р</a><a href="https://coub.com/kitsuneknowledge">’Р</a><a href="https://flickr.com/sobacore/">РіСЂ</a><a href="https://instagram.com/buckwheatdata">РіСЂ</a><a href="portfolio">»РЅР°</a><a href="mailto:will@sobaht.ml">Р»Р</a><a href="mailto:sobacore@gmail.com">ѕР</a></big>
 				<br><br>
 				<element class="r1"><b><i>MMX-MMXX-MMXXII</i></b></element>
 				<i>rpe4ka</i>
 				<script src="mmxxii_y.js"></script>
 				<br><br>
 				—{░▒▓╫⁞≈¤<a href="assets/audio/00.ogg">◘</a>¤≈⁞╫▓▒░}—
-				</div>
-        </center>
+			</div>
+		</center>
 	</body>
 </html>
 
 <!-- SEE THE CONSOLE FOR MORE DETAILS 
     make sure your console drawer is opened
-    http://sobakun.gq/assets/ -->
+    http://sobaht.ml/assets/ -->
