--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				<hr>
 				</header>
 				<div class="subtitle">
-				<big><a href="https://tx.me/kisoqual">РіСЂ</a><a href="https://t.me/kisoqual">РµС‡</a><a href="https://vk.com/kisoqual">ёСЃР</a><a href="https://soundcloud.com/kisoqual">РЅР</a><a href="https://kisoqual.bandcamp.com">РЅР</a><a href="https://twitter.com/buckwheatdata">µРІС</a><a href="https://fb.com/kisoqual">Р№</a><a href="https://youtube.com/c/kisoqual">’Р</a><a href="https://twitch.tv/underscoresoba">’Р</a><a href="https://coub.com/kitsuneknowledge">’Р</a><a href="https://flickr.com/sobacore/">РіСЂ</a><a href="https://instagram.com/buckwheatdata">РіСЂ</a><a href="portfolio">»РЅР°</a><a href="mailto:will@sobaht.ml">Р»Р</a><a href="mailto:sobacore@gmail.com">ѕР</a></big>
+				<big><a href="https://tx.me/kisoqual">РіСЂ</a><a href="https://t.me/kisoqual">РµС‡</a><a href="https://vk.com/kisoqual">ёСЃР</a><a href="https://soundcloud.com/kisoqual">РЅР</a><a href="https://kisoqual.bandcamp.com">РЅР</a><a href="https://twitter.com/buckwheatdata">µРІС</a><a href="https://fb.com/kisoqual">Р№</a><a href="https://youtube.com/c/kisoqual">’Р</a><a href="https://twitch.tv/underscoresoba">’Р</a><a href="https://coub.com/kitsuneknowledge">’Р</a><a href="https://flickr.com/sobacore/">РіСЂ</a><a href="https://instagram.com/buckwheatdata">РіСЂ</a><a href="https://github.com/kisoqual">ѕР</a><a href="portfolio">»РЅР°</a><a href="mailto:will@sobaht.ml">Р»Р</a><a href="mailto:sobacore@gmail.com">ѕР</a></big>
 				<br><br>
 				<element class="r1"><b><i>MMX-MMXX-MMXXII</i></b></element>
 				<i>rpe4ka</i>
