--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -11,6 +11,10 @@
     color: #FFFFFF; 
     font-family: arial; 
     letter-spacing: -1.25px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
     ">
     <body style="font-size: 20pt;">
         <meta name="viewport" content="width=device-width">
