--- a/neurocom/index.html
+++ b/neurocom/index.html
@@ -4,13 +4,20 @@
 <meta name="description" content="NEUROCOM"/>
 <link rel="icon" href="neurocom/favicon.png">
 <title>SAILORHYPERSAILORHYPER</title>
-<html style="background-color: #101010; color: #FFFFFF; font-family: serif;">
+<html style="
+background-color: #101010; 
+color: #FFFFFF; 
+font-family: serif;
+display: flex;
+flex-direction: column;
+justify-content: center;
+height: 100%;">
     <body>
         <style>
-		    h1 {
-		    letter-spacing: 8px; 
-		    }
-		</style>
+	    h1 {
+	    letter-spacing: 8px; 
+	    }
+	</style>
         <center><h1>
             SAILOR<a href="https://t.me/s/lfxlfxlfxlfxlfxlfx">HYPER</a><a href="sailorx/est1.jpg">SAILOR</a>HYPER
         </center></h1>
