--- a/apatch.html
+++ b/apatch.html
@@ -1,5 +1,11 @@
 <!DOCTYPE HTML>
-<html style="background-color: #101010; color: #FFFFFF;">
+<html style="
+background-color: #101010; 
+color: #FFFFFF;
+display: flex;
+flex-direction: column;
+justify-content: center;
+height: 100%;">
     <title>Ð½Ð°Ð¶Ð°ÑÑ</title>
     <body>
         <meta name="viewport" content="width=device-width">
