--- a/apatch.html
+++ b/apatch.html
@@ -16,7 +16,8 @@ height: 100%;">
         	background-color: #202020;
                 border-color: #505050;
                 border-width: initial;"
-                onclick=alert('Ð·Ð°Ð³ÑÑÐ·ÐºÐ°')>
+                onclick=alert('Ð·Ð°Ð³ÑÑÐ·ÐºÐ°')
+		title="Ð½Ð°Ð¶Ð°ÑÑ">
                 <a href="apatchw.html">Ð½Ð°Ð¶Ð°ÑÑ</a>
                 </button>
 		</center>
