--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<link rel="icon" href="assets/img/favicon.svg">
-		<link rel="icon" href="assets/img/favicon.png">
-		<link rel="icon" href="assets/img/favicon.ico">
-		<title>BUCKWHEAT MINDS</title>
+		<!--<link rel="icon" href="assets/img/favicon.svg"><-->
+		<link rel="icon" href="https://cdn140.picsart.com/335157644019211.png">
+		<!--<link rel="icon" href="assets/img/favicon.ico"><-->
+		<title>CHIRUMIRU MINDS</title>
 		<link rel="stylesheet" href="assets/misc/style.css">
 		<meta name="viewport" content="width=device-width initial-scale=.85">
 		<meta name="yandex-verification" content="a4749a5df4a718e4" />
