--- a/assets/misc/index.html
+++ b/assets/misc/index.html
@@ -13,11 +13,13 @@
             <tr>
                 <th>Name</th>
                 <th>Size</th>
-                <th>Last modified</th>
+                <th>Creation Date</th>
+                <th>Last Modified</th>
             </tr>
             <tr>
                 <td><center><a href="https://sobaht.ml/assets/misc/style.css">style.css</a></center></td>
                 <td><center>276B</center></td>
+                <td><center>2022-08-29 12:10</center></td>
                 <td><center>2022-09-09 09:54</center></td>
             </tr>
         </table>
