--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<!--<link rel="icon" href="assets/img/favicon.ico"><-->
 		<title>CHIRUMIRU MINDS</title>
 		<link rel="stylesheet" href="assets/misc/style.css">
-		<meta name="viewport" content="width=device-width initial-scale=.85">
+		<meta name="viewport" content="width=device-width initial-scale=".85">
 		<meta name="yandex-verification" content="a4749a5df4a718e4" />
 		<meta name="description" content="index"/>
 		<script src="https://code.jquery.com/jquery-3.6.1.js"
