--- a/assets/misc/index.html
+++ b/assets/misc/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
     <meta charset="utf-8">
-    <meta viewport="width" content="device-width" initial-scale="1">
+    <meta viewport="width" content="device-width initial-scale="1">
     </head>
     <body style="
     background-color: #101010; 
