--- a/assets/misc/index.html
+++ b/assets/misc/index.html
@@ -2,6 +2,7 @@
     <head>
     <meta charset="utf-8">
     <meta viewport="width" content="width=device-width initial-scale=".85">
+    <title>Directory List</title>
     </head>
     <body style="
     background-color: #101010; 
