--- a/assets/misc/index.html
+++ b/assets/misc/index.html
@@ -23,6 +23,12 @@
                 <td><center>2022-08-29 12:10</center></td>
                 <td><center>2022-09-09 09:54</center></td>
             </tr>
+            <tr>
+                <td><center><a href="https://sobaht.ml/assets/misc/index.html">index.html</a></center></td>
+                <td><center>276B</center></td>
+                <td><center>2022-08-29 12:10</center></td>
+                <td><center>2022-09-09 09:54</center></td>
+            </tr>
         </table>
     </body>
 </html>
