--- a/assets/misc/index.html
+++ b/assets/misc/index.html
@@ -25,9 +25,9 @@
             </tr>
             <tr>
                 <td><center><a href="https://sobaht.ml/assets/misc/index.html">index.html</a></center></td>
-                <td><center>276B</center></td>
-                <td><center>2022-08-29 12:10</center></td>
-                <td><center>2022-09-09 09:54</center></td>
+                <td><center>1.17KB</center></td>
+                <td><center>2022-09-12 23:39</center></td>
+                <td><center>2022-09-14 22:37</center></td>
             </tr>
         </table>
     </body>
