--- a/assets/misc/index.html
+++ b/assets/misc/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
     <meta charset="utf-8">
-    <meta viewport="width" content="width=device-width initial-scale=".85">
+    <meta viewport="width" content="width=device-width initial-scale=.85">
     <title>Directory List</title>
     </head>
     <body style="
