Update and rename Untitled-1.html to index.html

--- a/assets/img/index.html
+++ b/assets/img/index.html
@@ -52,6 +52,12 @@
                 <td><center>2021-12-28 14:56</center></td>
                 <td><center>2022-08-29 12:44</center></td>
             </tr>
+            <tr>
+                <td><center><a href="index.html">index.html</a></center></td>
+                <td><center>4.3K</center></td>
+                <td><center>2021-12-28 14:56</center></td>
+                <td><center>2022-08-29 12:44</center></td>
+            </tr>
         </table>
     </body>
 </html>
