--- a/assets/img/index.html
+++ b/assets/img/index.html
@@ -2,6 +2,7 @@
     <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width initial-scale=.85">
+    <title>Directory List</title>
     </head>
     <body style="
     background-color: #101010; 
@@ -56,7 +57,7 @@
                 <td><center><a href="index.html">index.html</a></center></td>
                 <td><center>2.46KB</center></td>
                 <td><center>2022-09-14 23:00</center></td>
-                <td><center>2022-09-14 23:01</center></td>
+                <td><center>2022-09-14 23:03</center></td>
             </tr>
         </table>
     </body>
