--- a/assets/misc/index.html
+++ b/assets/misc/index.html
@@ -27,7 +27,10 @@
                 <td><center><a href="index.html">index.html</a></center></td>
                 <td><center>1.17KB</center></td>
                 <td><center>2022-09-12 23:39</center></td>
-                <td><center>2022-09-14 22:37</center></td>
+                <td><center>2022-09-14 23:13</center></td>
+            </tr>
+            <tr>
+                <td><center><a href="https://sobaht.ml/assets">..</a></center></td>
             </tr>
         </table>
     </body>
