--- a/assets/img/index.html
+++ b/assets/img/index.html
@@ -57,7 +57,10 @@
                 <td><center><a href="index.html">index.html</a></center></td>
                 <td><center>2.49KB</center></td>
                 <td><center>2022-09-14 23:00</center></td>
-                <td><center>2022-09-14 23:04</center></td>
+                <td><center>2022-09-14 23:14</center></td>
+            </tr>
+            <tr>
+                <td><center><a href="https://sobaht.ml/assets">..</a></center></td>
             </tr>
         </table>
     </body>
