--- a/assets/img/index.html
+++ b/assets/img/index.html
@@ -55,9 +55,9 @@
             </tr>
             <tr>
                 <td><center><a href="index.html">index.html</a></center></td>
-                <td><center>2.61KB</center></td>
+                <td><center>2.61K</center></td>
                 <td><center>2022-09-14 23:00</center></td>
-                <td><center>2022-09-14 23:14</center></td>
+                <td><center>2022-09-14 23:26</center></td>
             </tr>
             <tr>
                 <td><center><a href="https://sobaht.ml/assets">..</a></center></td>
