--- a/assets/misc/index.html
+++ b/assets/misc/index.html
@@ -25,9 +25,9 @@
             </tr>
             <tr>
                 <td><center><a href="index.html">index.html</a></center></td>
-                <td><center>1.23KB</center></td>
+                <td><center>1.23K</center></td>
                 <td><center>2022-09-12 23:39</center></td>
-                <td><center>2022-09-14 23:13</center></td>
+                <td><center>2022-09-14 23:27</center></td>
             </tr>
             <tr>
                 <td><center><a href="https://sobaht.ml/assets">..</a></center></td>
