--- a/assets/video/Untitled-1.html
+++ b/assets/video/Untitled-1.html
@@ -19,15 +19,15 @@
             </tr>
             <tr>
                 <td><center><a href="am01.mp4">am01.mp4</a></center></td>
-                <td><center>2.9MB</center></td>
+                <td><center>2.9M</center></td>
                 <td><center>2021-12-11 16:39</center></td>
                 <td><center>2022-08-29 12:49</center></td>
             </tr>
             <tr>
                 <td><center><a href="index.html">index.html</a></center></td>
-                <td><center>1.22KB</center></td>
+                <td><center>1.22K</center></td>
                 <td><center>2021-12-11 16:39</center></td>
-                <td><center>2022-09-14 23:25</center></td>
+                <td><center>2022-09-14 23:28</center></td>
             </tr>
             <tr>
                 <td><center><a href="https://sobaht.ml/assets">..</a></center></td>
