--- a/assets/img/index.html
+++ b/assets/img/index.html
@@ -2,13 +2,13 @@
     <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width initial-scale=.85">
-    <title>Directory List</title>
+    <title>Directory Listing</title>
     </head>
     <body style="
     background-color: #101010; 
     color: #FFFFFF;
     margin: 5%;">
-        <h1>Directory List</h1>
+        <h1>Directory Listing</h1>
         <hr>
         <table style="width:100%">
             <tr>
@@ -57,7 +57,7 @@
                 <td><center><a href="index.html">index.html</a></center></td>
                 <td><center>2.61K</center></td>
                 <td><center>2022-09-14 23:00</center></td>
-                <td><center>2022-09-14 23:26</center></td>
+                <td><center>2022-09-14 23:28</center></td>
             </tr>
             <tr>
                 <td><center><a href="https://sobaht.ml/assets">..</a></center></td>
