--- a/assets/audio/index.html
+++ b/assets/audio/index.html
@@ -2,13 +2,13 @@
     <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width initial-scale=.85">
-    <title>Directory List</title>
+    <title>Directory Listing</title>
     </head>
     <body style="
     background-color: #101010; 
     color: #FFFFFF;
     margin: 5%;">
-        <h1>Directory List</h1>
+        <h1>Directory Listing</h1>
         <hr>
         <table style="width:100%">
             <tr>
@@ -27,7 +27,7 @@
                 <td><center><a href="index.html">index.html</a></center></td>
                 <td><center>1.54K</center></td>
                 <td><center>2021-12-11 16:39</center></td>
-                <td><center>2022-09-14 23:19</center></td>
+                <td><center>2022-09-14 23:39</center></td>
             </tr>
             <tr>
                 <td><center><a href="is_this_what_it_means_to_dream.mp3">is_this_what_it_means_to_dream.mp3</a></center></td>
