--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<!--<link rel="icon" href="assets/img/favicon.svg"><-->
-		<link rel="icon" href="https://cdn140.picsart.com/335157644019211.png">
-		<!--<link rel="icon" href="assets/img/favicon.ico"><-->
+		<!--<link rel="icon" href="assets/img/favicon.svg">
+		<link rel="icon" href="https://cdn140.picsart.com/335157644019211.png"><-->
+		<link rel="icon" href="https://avatars.githubusercontent.com/u/64285271?v=4">
+		<!--<link rel="icon" href="assets/img/favicon.png">
+		<link rel="icon" href="assets/img/favicon.ico"><-->
 		<title>CHIRUMIRU MINDS</title>
 		<link rel="stylesheet" href="assets/misc/style.css">
 		<meta name="viewport" content="width=device-width initial-scale=.85">
