--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		<div class="container">
 			<div class="text">
 				<header>
-					<div class="title"><h1><a href="19-1">hello</a> <a href="19-2">there</a></h1></div>	
+					<div class="title" title="click/tap me for free discord nitro!"><h1><a href="19-1">hello</a> <a href="19-2">there</a></h1></div>	
 				<hr>
 				</header>
 				<div class="subtitle">
