--- a/19-1/index.html
+++ b/19-1/index.html
@@ -2,8 +2,8 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Troll Player #1</title>
-		<link rel="icon" href="dfbadbffbdbdfdbsfsfbdsdfbg.webp">
-		<link rel="stylesheet" href="/video/style.css">
+		<link rel="icon" href="dfbadbffbdbdfdbsfsfbdsdfbg.png">
+		<link rel="stylesheet" href="style.css">
 		<meta name="viewport" content="width=device-width initial-scale=1">
 	</head>
 	<body>
