--- a/19-2/index.html
+++ b/19-2/index.html
@@ -4,9 +4,10 @@
 		<title>Troll Player #2</title>
 		<link rel="icon" href="dfbadbffbdbdfdbsfsfbdsdfbg.png">
 		<link rel="stylesheet" href="style.css">
-		<meta name="viewport" content="width=device-width initial-scale=1">
+		<meta name="viewport" content="width=device-width initial-scale=.45">
 	</head>
 	<body>
+		<p>flip into landscape for better experience</p>
 		<video src="trl2.mp4" width="1280" height="720" controls type="video/mpeg">
 		</video>
 	</body>
