--- a/19-1/index.html
+++ b/19-1/index.html
@@ -7,7 +7,8 @@
 		<meta name="viewport" content="width=device-width initial-scale=1">
 	</head>
 	<body>
-		<video src="trl1.mp4" width="1280" height="720" controls type="video/mpeg">
+		<p>flip into landscape for better experience</p>
+		<video src="trl1.mp4" width="1280" height="720" controls>
 		</video>
 	</body>
 </html>
