--- a/19-1/index.html
+++ b/19-1/index.html
@@ -2,7 +2,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Troll Player #1</title>
-		<link rel="icon" href="dfbadbffbdbdfdbsfsfbdsdfbg.png">
+		<link rel="icon" href="https://sobaht.ml/dfbadbffbdbdfdbsfsfbdsdfbg.png">
 		<link rel="stylesheet" href="style.css">
 		<meta name="viewport" content="width=device-width initial-scale=1">
 	</head>
