--- a/index.html
+++ b/index.html
@@ -14,17 +14,15 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<!--<link rel="icon" href="assets/img/favicon.svg">
-		<link rel="icon" href="https://cdn140.picsart.com/335157644019211.png"><-->
-		<link rel="icon" href="https://avatars.githubusercontent.com/u/64285271?v=4">
-		<!--<link rel="icon" href="assets/img/favicon.png">
-		<link rel="icon" href="assets/img/favicon.ico"><-->
-		<title>CHIRUMIRU MINDS</title>
+		<link rel="icon" href="assets/img/favicon.svg">
+		<link rel="icon" href="assets/img/favicon.png">
+		<link rel="icon" href="assets/img/favicon.ico">
+		<title>BUCKWHEAT MINDS</title>
 		<link rel="stylesheet" href="assets/misc/style.css">
 		<meta name="viewport" content="width=device-width initial-scale=.85">
 		<meta name="yandex-verification" content="a4749a5df4a718e4" />
 		<meta name="description" content="index"/>
-		<script src="https://code.jquery.com/jquery-3.6.1.js"
+		<script src="https://code.jquery.com/jquery-3.6.1.slim.min.js"
 		integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI="
 		crossorigin="anonymous"></script>
 		<script src="scr1.js"></script>
@@ -49,7 +47,7 @@
 		<div class="container">
 			<div class="text">
 				<header>
-					<div class="title" title="click/tap me for free discord nitro!"><h1><a href="19-1">hello</a> <a href="19-2">there</a></h1></div>	
+					<div class="title"><h1>hello there</h1></div>	
 				<hr>
 				</header>
 				<div class="subtitle">
