--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 					<b><i>MMX-MMXX-MMXXII</i></b>
 				</element>
 				<i>rpe4ka</i>
-				<script src="mmxxii_y.js"></script>
+				<script src="mmxxii.js"></script>
 				<br><br>
 				—{░▒▓╫⁞≈¤<a href="assets/audio/00.ogg">◘</a>¤≈⁞╫▓▒░}—
 			</div>
