--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
    \  /
     \/
 	       :^3
+2010-2023 Kisoqual
+2012-2023 sobacore.blogspot.com
+2020-2023 sobaht.ml
 -->
 <html>
 	<head>
@@ -54,7 +57,7 @@
 				<big><a href="https://kisoqual.t.me/">РµС‡</a><a href="https://tx.me/s/kisoqual">РіСЂ</a><a href="https://t.me/s/kisoqual">РµС‡</a><a href="https://vk.com/kisoqual">ёСЃР</a><a href="https://soundcloud.com/kisoqual">РЅР</a><a href="https://kisoqual.bandcamp.com">РЅР</a><a href="https://twitter.com/buckwheatdata">µРІС</a><a href="https://fb.com/kisoqual">Р№</a><a href="https://youtube.com/kisoqual">’Р</a><a href="https://twitch.tv/underscoresoba">’Р</a><a href="https://coub.com/kitsuneknowledge">’Р</a><a href="https://flickr.com/sobacore">РіСЂ</a><a href="https://instagram.com/buckwheatdata">РіСЂ</a><a href="https://sketchfab.com/kisoqual">’Р</a><a href="https://github.com/kisoqual">ѕР</a><a href="https://gfycat.com/@kisoqual">ѕР</a><a href="https://codepen.io/kisoqual">»РЅР°</a><a href="portfolio">»РЅР°</a><a href="mailto:will@sobaht.ml">Р»Р</a><a href="mailto:sobacore@gmail.com">ѕР</a></big>
 				<br><br>
 				<element class="r1" title="click/tap me for arabic numbers or vice versa">
-					<b><i>MMX-MMXX-MMXXIII</i></b>
+					<b><i>MMX-MMXXIII</i></b>
 				</element>
 				<i>rpe4ka</i>
 				<script src="mmxxiii.js"></script>
