--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 		<meta name="viewport" content="width=device-width initial-scale=.85">
 		<meta name="yandex-verification" content="a4749a5df4a718e4" />
 		<meta name="description" content="index"/>
-		<script src="https://code.jquery.com/jquery-3.6.1.slim.min.js"
-		integrity="sha256-w8CvhFs7iHNVUtnSP0YKEg00p9Ih13rlL9zGqvLdePA="
+		<script src="src="https://code.jquery.com/jquery-3.7.0.slim.min.js"
+		integrity="sha256-tG5mcZUtJsZvyKAxYLVXrmjKBVLd6VpVccqz/r4ypFE="
 		crossorigin="anonymous"></script>
 		<script src="scr1.js"></script>
 		<meta name="title" content="BUCKWHEAT MINDS">
