--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<meta name="viewport" content="width=device-width initial-scale=.85">
 		<meta name="yandex-verification" content="a4749a5df4a718e4" />
 		<meta name="description" content="index"/>
-		<script src="src="https://code.jquery.com/jquery-3.7.0.slim.min.js"
+		<script src="https://code.jquery.com/jquery-3.7.0.slim.min.js"
 		integrity="sha256-tG5mcZUtJsZvyKAxYLVXrmjKBVLd6VpVccqz/r4ypFE="
 		crossorigin="anonymous"></script>
 		<script src="scr1.js"></script>
