--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -5,7 +5,6 @@
  (__  ) /_/ / /_/ / /_/ / ,< / /_/ / / / /     
 /____/\____/_.___/\__,_/_/|_|\__,_/_/ /_/      
 <!-->
-
 <html style="
     background-color: #101010; 
     color: #FFFFFF; 
@@ -20,7 +19,8 @@
         <meta name="viewport" content="width=device-width">
         <meta charset="utf-8">
         <meta http-equiv="Content-type" content="text/html;charset=utf-8">
-        <title>ソバクン𝑷𝑶𝑹𝑻𝑭𝑶𝑳𝑰𝑶 v0.22</title>
+        <link rel="icon" href="portfolio/icon.svg">
+        <title>ソバクン𝑷𝑶𝑹𝑻𝑭𝑶𝑳𝑰𝑶 v0.23</title>
         <center>more content @ <a href="https://deviantart.com/gre4kasektor"><i>deviantart</i></a>, <a href="https://flickr.com/sobacore"><i>flickr</i></a>
         & <a href="https://sketchfab.com/kisoqual"><i>sketchfab</i></a>
     </body>
