--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -19,7 +19,7 @@
         <meta name="viewport" content="width=device-width">
         <meta charset="utf-8">
         <meta http-equiv="Content-type" content="text/html;charset=utf-8">
-        <link rel="icon" href="portfolio/icon.svg">
+        <link rel="icon" href="icon.svg">
         <title>ソバクン𝑷𝑶𝑹𝑻𝑭𝑶𝑳𝑰𝑶 v0.23</title>
         <center>more content @ <a href="https://deviantart.com/gre4kasektor"><i>deviantart</i></a>, <a href="https://flickr.com/sobacore"><i>flickr</i></a>
         & <a href="https://sketchfab.com/kisoqual"><i>sketchfab</i></a>
