--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -15,12 +15,14 @@
     justify-content: center;
     height: 100%;
     ">
-    <body style="font-size: 20pt;">
+    <head>
         <meta name="viewport" content="width=device-width">
         <meta charset="utf-8">
         <meta http-equiv="Content-type" content="text/html;charset=utf-8">
         <link rel="icon" href="icon.svg">
         <title>ソバクン𝑷𝑶𝑹𝑻𝑭𝑶𝑳𝑰𝑶 v0.23</title>
+    </head>
+    <body style="font-size: 20pt;">
         <center>more content @ <a href="https://deviantart.com/gre4kasektor"><i>deviantart</i></a>, <a href="https://flickr.com/sobacore"><i>flickr</i></a>
         & <a href="https://sketchfab.com/kisoqual"><i>sketchfab</i></a>
     </body>
