--- a/neurocom/index.html
+++ b/neurocom/index.html
@@ -1,29 +1,30 @@
 <!DOCTYPE HTML>
-<meta charset="utf-8">
-<meta viewport="width" content="device-width">
-<meta name="description" content="NEUROCOM"/>
-<link rel="icon" href="neurocom/favicon.png">
-<title>SAILORHYPERSAILORHYPER</title>
 <html style="
-background-color: #101010; 
-color: #FFFFFF; 
-font-family: serif;
-display: flex;
-flex-direction: column;
-justify-content: center;
-height: 100%;">
-    <body>
-        <style>
-	    h1 {
-	    letter-spacing: 8px; 
-	    }
-	</style>
-        <center><h1>
-            SAILOR<a href="https://t.me/s/lfxlfxlfxlfxlfxlfx">HYPER</a><a href="sailorx/est1.jpg">SAILOR</a>HYPER
-        </center></h1>
-    </body>
-</html>
-
+    background-color: #101010; 
+    color: #FFFFFF; 
+    font-family: serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;">
+        <head>    
+            <meta charset="utf-8">
+            <meta viewport="width" content="device-width">
+            <meta name="description" content="NEUROCOM"/>
+            <link rel="icon" href="neurocom/favicon.png">
+            <title>SAILORHYPERSAILORHYPER</title>
+        </head>
+        <body>
+            <style>
+                h1 {
+                letter-spacing: 8px; 
+                }
+            </style>
+            <center><h1>
+                SAILOR<a href="idx2.htm">HYPER</a><a href="sailorx/est1.jpg">SAILOR</a>HYPER
+            </center></h1>
+        </body>
+    </html>
 <!--
     687474703a2f2f6275636b77686561742e67712f6e6575726f636f6d2f6d69646f72692f49582e706e67
 -->
