--- a/neurocom/idx2.htm
+++ b/neurocom/idx2.htm
@@ -18,6 +18,6 @@ height: 100%;">
     <body>
         <a href="https://t.me/lfxlfxlfxlfxlfxlfxlfxlfx">🕳</a> 
         <a href="javascript:(function () { var script = document.createElement('script'); script.src="//cdn.jsdelivr.net/npm/eruda"; document.body.appendChild(script); script.onload = function () { eruda.init() } })();">👁</a> 
-        <a href="view-source:https://sobaht.ml/neurocom/idx2.htm">⚡</a>
+        <a href="https://raw.githubusercontent.com/kisoqual/sobaht.ml/main/neurocom/idx2.htm">⚡</a>
     </body>
 </html>
