--- a/neurocom/idx2.htm
+++ b/neurocom/idx2.htm
@@ -17,7 +17,7 @@ height: 100%;">
     </head>
     <body>
         <a href="https://t.me/lfxlfxlfxlfxlfxlfxlfxlfx">🕳</a> 
-        <a href="javascript:(function () { var script = document.createElement('script'); script.src="//cdn.jsdelivr.net/npm/eruda"; document.body.appendChild(script); script.onload = function () { eruda.init() } })();">👁</a> 
+        <a href="javascript:(function () { var script = document.createElement('script'); script.src=&quot;//cdn.jsdelivr.net/npm/eruda&quot;; document.body.appendChild(script); script.onload = function () { eruda.init() } })();">👁</a> 
         <a href="https://raw.githubusercontent.com/kisoqual/sobaht.ml/main/neurocom/idx2.htm">⚡</a>
     </body>
 </html>
