modified:   neurocom/idx2.htm

--- a/neurocom/idx2.htm
+++ b/neurocom/idx2.htm
@@ -13,11 +13,11 @@ height: 100%;">
         <meta charset="utf-8">
         <meta viewport="width" content="device-width">
         <title>?</title>
-        <script>console.log('https://t.me/s/lfxlfxlfxlfxlfxlfxlfxlfx')</script>
+        <script src="https://cdn.jsdelivr.net/npm/eruda@3.0.0/eruda.js"></script>
+        <script>eruda.init();</script>
     </head>
     <body>
         <a href="https://t.me/lfxlfxlfxlfxlfxlfxlfxlfx">🕳</a> 
-        <a href="javascript:(function () { var script = document.createElement('script'); script.src=&quot;//cdn.jsdelivr.net/npm/eruda&quot;; document.body.appendChild(script); script.onload = function () { eruda.init() } })();">👁</a> 
-        <a href="https://raw.githubusercontent.com/kisoqual/sobaht.ml/main/neurocom/idx2.htm">⚡</a>
+        <a href="javascript:console.log('https://t.me/s/lfxlfxlfxlfxlfxlfxlfxlfx')">👁</a>
     </body>
 </html>
