modified:   neurocom/idx2.htm

--- a/neurocom/idx2.htm
+++ b/neurocom/idx2.htm
@@ -18,6 +18,6 @@ height: 100%;">
     </head>
     <body>
         <a href="https://t.me/lfxlfxlfxlfxlfxlfxlfxlfx">🕳</a> 
-        <a href="javascript:console.log('https://t.me/s/lfxlfxlfxlfxlfxlfxlfxlfx')">👁</a>
+        <a href="javascript:console.log('https://t.me/s/lfxlfxlfxlfxlfxlfxlfxlfx');alert('PRESS 🛠 BUTTON FOR DETAILS')">👁</a>
     </body>
 </html>
