modified:   neurocom/index.html

--- a/neurocom/index.html
+++ b/neurocom/index.html
@@ -11,7 +11,7 @@
             <meta charset="utf-8">
             <meta viewport="width" content="device-width">
             <meta name="description" content="NEUROCOM"/>
-            <link rel="icon" href="neurocom/favicon.png">
+            <link rel="icon" href="favicon.png">
             <title>SAILORHYPERSAILORHYPER</title>
         </head>
         <body>
