modified:   neurocom/idx2.htm modified:   neurocom/index.html

--- a/neurocom/idx2.htm
+++ b/neurocom/idx2.htm
@@ -11,7 +11,7 @@ font-size: 96px;
 height: 100%;">
     <head>
         <meta charset="utf-8">
-        <meta viewport="width" content="device-width">
+        <meta name="viewport" content="width=device-width">
         <title>?</title>
         <script src="https://cdn.jsdelivr.net/npm/eruda@3.0.0/eruda.js"></script>
         <script>eruda.init();</script>
