--- a/neurocom/index.html
+++ b/neurocom/index.html
@@ -9,7 +9,7 @@
     height: 100%;">
         <head>    
             <meta charset="utf-8">
-            <meta viewport="width" content="device-width">
+            <meta name="viewport" content="width=device-width">
             <meta name="description" content="NEUROCOM"/>
             <link rel="icon" href="favicon.png">
             <title>SAILORHYPERSAILORHYPER</title>
