--- a/neurocom/index.html
+++ b/neurocom/index.html
@@ -6,6 +6,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     height: 100%;">
         <head>    
             <meta charset="utf-8">
