--- a/apatch.html
+++ b/apatch.html
@@ -12,7 +12,7 @@ height: 100%;">
         <meta name="description" content="2"/>
         <center>
 	<br>
-        <button style="
+        <button type="button" style="
         	background-color: #202020;
                 border-color: #505050;
                 border-width: initial;"
