renamed:    neurocom/idx2.htm -> neurocom/idx2.html modified:   neurocom/index.html

--- a/neurocom/index.html
+++ b/neurocom/index.html
@@ -20,7 +20,7 @@
                 }
             </style>
             <center><h1>
-                SAILOR<a href="idx2.htm">HYPER</a><a href="sailorx/est1.jpg">SAILOR</a>HYPER
+                SAILOR<a href="idx2">HYPER</a><a href="sailorx/est1.jpg">SAILOR</a>HYPER
             </center></h1>
         </body>
     </html>
