modified:   apatch.html modified:   assets/index.html

--- a/apatch.html
+++ b/apatch.html
@@ -18,7 +18,7 @@ height: 100%;">
                 border-width: initial;"
                 onclick=alert('Ð·Ð°Ð³ÑÑÐ·ÐºÐ°')
 		title="Ð½Ð°Ð¶Ð°ÑÑ">
-                <a href="apatchw.html">Ð½Ð°Ð¶Ð°ÑÑ</a>
+                <a href="apatchw">Ð½Ð°Ð¶Ð°ÑÑ</a>
                 </button>
 		</center>
 	</body>
