modified:   neurocom/a1/index

--- a/neurocom/a1/index.html
+++ b/neurocom/a1/index.html
@@ -7,10 +7,11 @@
         <meta name="viewport" content="width=device-width">
     </head>
     <body
-    style="
+    style="    
     letter-spacing: 0;
-    line-height: 1ch;
+    line-height: 1.75ch;
     display: block;
+    font-family: monospace;
     ">
         ====++***+=+**#%#%#%%%#****++*+++++++++++++++++++++++*+*++++*++==++++++==++++=====+++++++++================+++++=+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++######+
         =+*##*+=+##*+#%%#%#%%%#**#*++#=++++++++++++++++++++++*+*++++*++===+++++==++++++++++++++++++================+++++=+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++%#####*
