--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<meta name="viewport" content="width=device-width initial-scale=.85">
 		<meta name="yandex-verification" content="a4749a5df4a718e4" />
 		<meta name="description" content="index"/>
-		<script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
+		<script src="jquery.slim.min.js"></script>
 		<script src="scr1.js"></script>
 		<meta name="title" content="BUCKWHEAT MINDS">
 		<meta name="description" content="𝒄𝒍𝒊𝒄𝒌 𝒎𝒆 𝒕𝒐 𝒔𝒆𝒆 𝒄𝒐𝒏𝒕𝒆𝒏𝒕">
