dependency right from pkg

--- a/neurocom/idx2.html
+++ b/neurocom/idx2.html
@@ -13,7 +13,7 @@ height: 100%;">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
         <title>?</title>
-        <script src="https://cdn.jsdelivr.net/npm/eruda@3.0.0/eruda.js"></script>
+        <script src="eruda.js"></script>
         <script>eruda.init();</script>
     </head>
     <body>
