--- a/neurocom/idx2.html
+++ b/neurocom/idx2.html
@@ -18,6 +18,6 @@ height: 100%;">
     </head>
     <body>
         <a href="https://t.me/lfxlfxlfxlfxlfxlfxlfxlfx">🕳</a> 
-        <a href="javascript:console.log('https://t.me/s/lfxlfxlfxlfxlfxlfxlfxlfx');alert('PRESS 🛠 BUTTON FOR DETAILS')">👁</a>
+        <a href="javascript:console.log('https://t.me/s/lfxlfxlfxlfxlfxlfxlfxlfx');alert('PRESS F12 OR 🛠 BUTTON FOR DETAILS\nMAKE SURE YOU HAVE ACCESS TO CONSOLE')">👁</a>
     </body>
 </html>
