modified:   index.html

--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
 		<script src="scr1.js"></script>
 		<meta name="title" content="BUCKWHEAT MINDS">
 		<meta name="description" content="𝒄𝒍𝒊𝒄𝒌 𝒎𝒆 𝒕𝒐 𝒔𝒆𝒆 𝒄𝒐𝒏𝒕𝒆𝒏𝒕">
-		<meta name="url" content="https://sobakun.gq">
+		<meta name="url" content="https://sobaht.ml">
 		<meta name="image" content="assets/img/cover.jpg">
 		<meta name="twitter:card" content="summary_large_image">
 		<meta name="twitter:title" content="BUCKWHEAT MINDS">
 		<meta name="twitter:description" content="𝒄𝒍𝒊𝒄𝒌 𝒎𝒆 𝒕𝒐 𝒔𝒆𝒆 𝒄𝒐𝒏𝒕𝒆𝒏𝒕">
-		<meta name="twitter:site" content="https://sobakun.gq">
+		<meta name="twitter:site" content="https://sobaht.ml">
 		<meta name="twitter:image" content="assets/img/cover.jpg">
 		<meta property="oc:title" content="BUCKWHEAT MINDS">
 		<meta property="oc:description" content="𝒄𝒍𝒊𝒄𝒌 𝒎𝒆 𝒕𝒐 𝒔𝒆𝒆 𝒄𝒐𝒏𝒕𝒆𝒏𝒕">
-		<meta property="oc:url" content="https://sobakun.gq">
+		<meta property="oc:url" content="https://sobaht.ml">
 		<meta property="oc:image:width" content="1600">
 		<meta property="oc:image:height" content="630">
 		<meta property="oc:image" content="assets/img/cover.jpg">
