--- a/assets/audio/index.html
+++ b/assets/audio/index.html
@@ -27,7 +27,7 @@
                 <td><center><a href="index.html">index.html</a></center></td>
                 <td><center>1.55K</center></td>
                 <td><center>2021-12-11 16:39</center></td>
-                <td><center>2022-09-22 21:48</center></td>
+                <td><center>2023-24-07 18:00</center></td>
             </tr>
             <tr>
                 <td><center><a href="is_this_what_it_means_to_dream.mp3">is_this_what_it_means_to_dream.mp3</a></center></td>
@@ -36,7 +36,7 @@
                 <td><center>2022-08-29 12:48</center></td>
             </tr>
             <tr>
-                <td><center><a href="https://sobaht.ml/assets">..</a></center></td>
+                <td><center><a href="https://so.bang.cl/assets">..</a></center></td>
             </tr>
         </table>
     </body>
