--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	       :^3
 2010-2023 Kisoqual
 2012-2023 sobacore.blogspot.com
-2020-2023 sobaht.ml
+2020-2023 so.bang.cl
 -->
 <html>
 	<head>
@@ -29,16 +29,16 @@
 		<script src="scr1.js"></script>
 		<meta name="title" content="BUCKWHEAT MINDS">
 		<meta name="description" content="𝒄𝒍𝒊𝒄𝒌 𝒎𝒆 𝒕𝒐 𝒔𝒆𝒆 𝒄𝒐𝒏𝒕𝒆𝒏𝒕">
-		<meta name="url" content="https://sobaht.ml">
+		<meta name="url" content="https://so.bang.cl">
 		<meta name="image" content="assets/img/cover.jpg">
 		<meta name="twitter:card" content="summary_large_image">
 		<meta name="twitter:title" content="BUCKWHEAT MINDS">
 		<meta name="twitter:description" content="𝒄𝒍𝒊𝒄𝒌 𝒎𝒆 𝒕𝒐 𝒔𝒆𝒆 𝒄𝒐𝒏𝒕𝒆𝒏𝒕">
-		<meta name="twitter:site" content="https://sobaht.ml">
+		<meta name="twitter:site" content="https://so.bang.cl">
 		<meta name="twitter:image" content="assets/img/cover.jpg">
 		<meta property="oc:title" content="BUCKWHEAT MINDS">
 		<meta property="oc:description" content="𝒄𝒍𝒊𝒄𝒌 𝒎𝒆 𝒕𝒐 𝒔𝒆𝒆 𝒄𝒐𝒏𝒕𝒆𝒏𝒕">
-		<meta property="oc:url" content="https://sobaht.ml">
+		<meta property="oc:url" content="https://so.bang.cl">
 		<meta property="oc:image:width" content="1600">
 		<meta property="oc:image:height" content="630">
 		<meta property="oc:image" content="assets/img/cover.jpg">
@@ -52,7 +52,7 @@
 				<hr>
 				</header>
 				<div class="subtitle">
-				<big><a href="https://kisoqual.t.me/">РµС‡</a><a href="https://tx.me/s/kisoqual">РіСЂ</a><a href="https://t.me/s/kisoqual">РµС‡</a><a href="https://vk.com/kisoqual">ёСЃР</a><a href="https://soundcloud.com/kisoqual">РЅР</a><a href="https://kisoqual.bandcamp.com">РЅР</a><a href="https://twitter.com/buckwheatdata">µРІС</a><a href="https://fb.com/kisoqual">Р№</a><a href="https://youtube.com/kisoqual">’Р</a><a href="https://twitch.tv/kisoqual">’Р</a><a href="https://coub.com/kitsuneknowledge">’Р</a><a href="https://flickr.com/sobacore">РіСЂ</a><a href="https://instagram.com/buckwheatdata">РіСЂ</a><a href="https://sketchfab.com/kisoqual">’Р</a><a href="https://github.com/kisoqual">ѕР</a><a href="https://gfycat.com/@kisoqual">ѕР</a><a href="https://codepen.io/kisoqual">»РЅР°</a><a href="https://sobacore.blogspot.com">»РЅР°</a><a href="portfolio">»РЅР°</a><!--a href="mailto:will@sobaht.ml"-->Р»Р<!--/a--><a href="mailto:sobacore@gmail.com">ѕР</a></big>
+				<big><a href="https://kisoqual.t.me/">РµС‡</a><a href="https://tx.me/s/kisoqual">РіСЂ</a><a href="https://t.me/s/kisoqual">РµС‡</a><a href="https://vk.com/kisoqual">ёСЃР</a><a href="https://soundcloud.com/kisoqual">РЅР</a><a href="https://kisoqual.bandcamp.com">РЅР</a><a href="https://twitter.com/buckwheatdata">µРІС</a><a href="https://fb.com/kisoqual">Р№</a><a href="https://youtube.com/kisoqual">’Р</a><a href="https://twitch.tv/kisoqual">’Р</a><a href="https://coub.com/kitsuneknowledge">’Р</a><a href="https://flickr.com/sobacore">РіСЂ</a><a href="https://instagram.com/buckwheatdata">РіСЂ</a><a href="https://sketchfab.com/kisoqual">’Р</a><a href="https://github.com/kisoqual">ѕР</a><a href="https://gfycat.com/@kisoqual">ѕР</a><a href="https://codepen.io/kisoqual">»РЅР°</a><a href="https://sobacore.blogspot.com">»РЅР°</a><a href="portfolio">»РЅР°</a><!--a href="mailto:will@so.bang.cl"-->Р»Р<!--/a--><a href="mailto:sobacore@gmail.com">ѕР</a></big>
 				<br><br>
 				<element class="r1" title="click/tap me for arabic numbers or vice versa">
 					<b><i>MMX-MMXXIII</i></b>
@@ -68,4 +68,4 @@
 
 <!-- SEE THE CONSOLE FOR MORE DETAILS 
     make sure your console drawer is opened
-    http://sobaht.ml/assets/ -->
+    http://so.bang.cl/assets/ -->
