--- a/assets/video/index.html
+++ b/assets/video/index.html
@@ -27,10 +27,10 @@
                 <td><center><a href="index.html">index.html</a></center></td>
                 <td><center>1.23K</center></td>
                 <td><center>2022-09-14 23:23</center></td>
-                <td><center>2022-09-22 21:47</center></td>
+                <td><center>2022-07-24 18:03</center></td>
             </tr>
             <tr>
-                <td><center><a href="https://sobaht.ml/assets">..</a></center></td>
+                <td><center><a href="https://so.bang.cl/assets">..</a></center></td>
             </tr>
         </table>
     </body>
