--- a/assets/img/index.html
+++ b/assets/img/index.html
@@ -57,10 +57,10 @@
                 <td><center><a href="index.html">index.html</a></center></td>
                 <td><center>2.62K</center></td>
                 <td><center>2022-09-14 23:00</center></td>
-                <td><center>2022-10-13 01:01</center></td>
+                <td><center>2023-07-24 18:01</center></td>
             </tr>
             <tr>
-                <td><center><a href="https://sobaht.ml/assets">..</a></center></td>
+                <td><center><a href="https://so.bang.cl/assets">..</a></center></td>
             </tr>
         </table>
     </body>
