--- a/assets/misc/index.html
+++ b/assets/misc/index.html
@@ -27,10 +27,10 @@
                 <td><center><a href="index.html">index.html</a></center></td>
                 <td><center>1.23K</center></td>
                 <td><center>2022-09-12 23:39</center></td>
-                <td><center>2022-09-30 22:55</center></td>
+                <td><center>2023-07-24 18:02</center></td>
             </tr>
             <tr>
-                <td><center><a href="https://sobaht.ml/assets">..</a></center></td>
+                <td><center><a href="https://so.bang.cl/assets">..</a></center></td>
             </tr>
         </table>
     </body>
