--- a/ruthenia/index.html
+++ b/ruthenia/index.html
@@ -11,7 +11,7 @@
 <html style="background-color: #101010; color: #FFFFFF; font-family: serif;">
     <body>
         <script>
-            console.log("http://sobakun.gq/ruthenia/xn.htm");
+            console.log("http://so.bang.cl/ruthenia/xn.htm");
             console.log("1 - DD.MM.YYYY / 2 - MM-DD-YYYY");
         </script>
         <style>
