--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				<hr>
 				</header>
 				<div class="subtitle">
-				<big><a href="https://kisoqual.t.me/">РµС‡</a><a href="https://tx.me/s/kisoqual">РіСЂ</a><a href="https://t.me/s/kisoqual">РµС‡</a><a href="https://vk.com/kisoqual">ёСЃР</a><a href="https://soundcloud.com/kisoqual">РЅР</a><a href="https://kisoqual.bandcamp.com">РЅР</a><a href="https://mixcloud.com/kisoqual">РЅР</a><a href="https://twitter.com/buckwheatdata" title="twitter fandom is dying💀">µРІС</a><a href="https://x.com/buckwheatdata">µРІС</a><a href="https://fb.com/kisoqual">Р№</a><a href="https://youtube.com/kisoqual">’Р</a><a href="https://twitch.tv/kisoqual">’Р</a><a href="https://coub.com/kitsuneknowledge">’Р</a><a href="https://flickr.com/sobacore">РіСЂ</a><a href="https://instagram.com/buckwheatdata">РіСЂ</a><a href="https://sketchfab.com/kisoqual">’Р</a><a href="https://github.com/kisoqual">ѕР</a><a href="https://gfycat.com/@kisoqual">ѕР</a><a href="https://codepen.io/kisoqual">»РЅР°</a><a href="https://sobacore.blogspot.com">»РЅР°</a><a href="portfolio">»РЅР°</a><!--a href="mailto:will@so.bang.cl"-->Р»Р<!--/a--><a href="mailto:sobacore@gmail.com">ѕР</a></big>
+				<big><a href="https://kisoqual.t.me/">РµС‡</a><a href="https://tx.me/s/kisoqual">РіСЂ</a><a href="https://t.me/s/kisoqual">РµС‡</a><a href="https://vk.com/kisoqual">ёСЃР</a><a href="https://soundcloud.com/kisoqual">РЅР</a><a href="https://kisoqual.bandcamp.com">РЅР</a><a href="https://mixcloud.com/kisoqual">РЅР</a><a href="https://twitter.com/buckwheatdata" title="twitter fandom is dying💀">µРІС</a><a href="https://x.com/buckwheatdata">µРІС</a><a href="https://fb.com/kisoqual">Р№</a><a href="https://youtube.com/kisoqual">’Р</a><a href="https://twitch.tv/kisoqual">’Р</a><a href="https://coub.com/kitsuneknowledge">’Р</a><a href="https://flickr.com/sobacore">РіСЂ</a><a href="https://instagram.com/buckwheatdata">РіСЂ</a><a href="https://sketchfab.com/kisoqual">’Р</a><a href="https://github.com/kisoqual">ѕР</a><a href="https://gfycat.com/@kisoqual">ѕР</a><a href="https://codepen.io/kisoqual">»РЅР°</a><a href="https://sobacore.blogspot.com">»РЅР°</a><a href="portfolio">»РЅР°</a><!--a href="mailto:will@so.bang.cl"--><span class="txt1" title="unavalible">Р»Р</span><!--/a--><a href="mailto:sobacore@gmail.com">ѕР</a></big>
 				<br><br>
 				<element class="r1" title="click/tap me for arabic numbers or vice versa">
 					<b><i>MMX-MMXXIII</i></b>
@@ -60,7 +60,7 @@
 				<i>rpe4ka</i>
 				<script src="mmxxiii.js"></script>
 				<br><br>
-				—{░▒▓╫⁞≈¤<a href="assets/audio/00.ogg">◘</a>¤≈⁞╫▓▒░}—
+				—{░▒▓╫⁞≈¤<a class="point" href="assets/audio/00.ogg">◘</a>¤≈⁞╫▓▒░}—
 			</div>
 		</center>
 	</body>
