modified:   apatchw.html

--- a/apatchw.html
+++ b/apatchw.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <meta charset="utf-8">
-<html style="background-color:#101010;color:#FFFFFF;font-family:'Iosevka SS05 Web',monospace;">
+<html style="background-color:#101010;color:#FFFFFF;font-family:'Iosevka SS05 Web',monospace">
     <title>Ð·Ð°Ð³ÑÑÐ·ÐºÐ°</title>
     <head>
         <link rel="stylesheet" href="assets/fonts/iosevka-ss05.css">
