--- a/assets/misc/index.html
+++ b/assets/misc/index.html
@@ -19,15 +19,15 @@
             </tr>
             <tr>
                 <td><center><a href="style.css">style.css</a></center></td>
-                <td><center>923B</center></td>
+                <td><center>1.06K</center></td>
                 <td><center>2022-08-29 12:10</center></td>
-                <td><center>2024-02-21 23:27</center></td>
+                <td><center>2024-02-21 23:34</center></td>
             </tr>
             <tr>
                 <td><center><a href="index.html">index.html</a></center></td>
                 <td><center>1.23K</center></td>
                 <td><center>2022-09-12 23:39</center></td>
-                <td><center>2024-02-21 23:28</center></td>
+                <td><center>2024-02-21 23:35</center></td>
             </tr>
             <tr>
                 <td><center><a href="https://so.bang.cl/assets">..</a></center></td>
