--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
    \  /
     \/
 	       :^3
-2010-2024 Kisoqual
-2012-2024 sobacore.blogspot.com
-2020-2024 so.bang.cl
+2010-2025 Kisoqual
+2012-2025 sobacore.blogspot.com
+2020-2025 so.bang.cl
 -->
 <html>
 	<head>
@@ -55,10 +55,10 @@
 				<big><a href="https://kisoqual.t.me/">РµС‡</a><a href="https://tx.me/s/kisoqual">РіСЂ</a><a href="https://t.me/s/kisoqual">РµС‡</a><a href="https://vk.com/kisoqual">ёСЃР</a><a href="https://soundcloud.com/kisoqual">РЅР</a><a href="https://kisoqual.bandcamp.com">РЅР</a><a href="https://mixcloud.com/kisoqual">РЅР</a><a href="https://twitter.com/buckwheatdata" title="twitter fandom is dying💀">µРІС</a><a href="https://x.com/buckwheatdata">µРІС</a><a href="https://fb.com/kisoqual">Р№</a><a href="https://youtube.com/kisoqual">’Р</a><a href="https://twitch.tv/kisoqual">’Р</a><a href="https://goodgame.ru/kisoqual">’Р</a><a href="https://coub.com/kitsuneknowledge">’Р</a><a href="https://flickr.com/sobacore">РіСЂ</a><a href="https://instagram.com/buckwheatdata">РіСЂ</a><a href="https://sketchfab.com/kisoqual">’Р</a><a href="https://github.com/kisoqual">ѕР</a><a href="https://kisoqual.itch.io">Рs</a><a href="https://gamejolt.com/@kisoqual">Рs</a><a href="https://gfycat.com/@kisoqual">ѕР</a><a href="https://codepen.io/kisoqual">»РЅР°</a><a href="https://sobacore.blogspot.com">»РЅР°</a><a href="portfolio">»РЅР°</a><!--a href="mailto:will@so.bang.cl"--><span class="txt1" title="unavailable">Р»Р</span><!--/a--><a href="mailto:sobacore@gmail.com">ѕР</a><a href="https://donationalerts.com/r/kisoqual">ѕР</a><a class="b00bsty-ex" title="in progress" href="cw1QPh" onclick="alert('no tiers available')">ѕР</a></big>
 				<br><br>
 				<label class="r1" title="click/tap me for arabic numbers or vice versa">
-					<b><i>MMX-MMXXIV</i></b>
+					<b><i>MMX-MMXXV</i></b>
 				</label>
 				<i>rpe4ka</i>
-				<script src="mmxxiv.js"></script>
+				<script src="mmxxv.js"></script>
 				<br><br>
 				—{░▒▓╫⁞≈¤<a class="point" href="assets/audio/00.ogg">◘</a>¤≈⁞╫▓▒░}—
 			</div>
