--- a/index.html
+++ b/index.html
@@ -15,55 +15,79 @@
 2020-2025 so.bang.cl
 -->
 <html>
-	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<link rel="icon" href="assets/img/favicon.svg">
-		<link rel="icon" href="assets/img/favicon.png">
-		<link rel="icon" href="assets/img/favicon.ico">
-		<title>BUCKWHEAT MINDS</title>
-		<link rel="stylesheet" href="assets/misc/style.css">
-		<meta name="viewport" content="width=device-width initial-scale=.85">
-		<meta name="yandex-verification" content="dc2a510944c5740b" />
-		<meta name="description" content="index"/>
-		<script src="jquery.slim.min.js"></script>
-		<script src="scr1.js"></script>
-		<meta name="title" content="BUCKWHEAT MINDS">
-		<meta name="description" content="𝒄𝒍𝒊𝒄𝒌 𝒎𝒆 𝒕𝒐 𝒔𝒆𝒆 𝒄𝒐𝒏𝒕𝒆𝒏𝒕">
-		<meta name="url" content="https://so.bang.cl">
-		<meta name="image" content="assets/img/cover.jpg">
-		<meta name="twitter:card" content="summary_large_image">
-		<meta name="twitter:title" content="BUCKWHEAT MINDS">
-		<meta name="twitter:description" content="𝒄𝒍𝒊𝒄𝒌 𝒎𝒆 𝒕𝒐 𝒔𝒆𝒆 𝒄𝒐𝒏𝒕𝒆𝒏𝒕">
-		<meta name="twitter:site" content="https://so.bang.cl">
-		<meta name="twitter:image" content="assets/img/cover.jpg">
-		<meta property="oc:title" content="BUCKWHEAT MINDS">
-		<meta property="oc:description" content="𝒄𝒍𝒊𝒄𝒌 𝒎𝒆 𝒕𝒐 𝒔𝒆𝒆 𝒄𝒐𝒏𝒕𝒆𝒏𝒕">
-		<meta property="oc:url" content="https://so.bang.cl">
-		<meta property="oc:image:width" content="1600">
-		<meta property="oc:image:height" content="630">
-		<meta property="oc:image" content="assets/img/cover.jpg">
-	</head>
-	<body>
-		<center>
+
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<link rel="icon" href="assets/img/favicon.svg">
+	<link rel="icon" href="assets/img/favicon.png">
+	<link rel="icon" href="assets/img/favicon.ico">
+	<title>BUCKWHEAT MINDS</title>
+	<link rel="stylesheet" href="assets/misc/style.css">
+	<meta name="viewport" content="width=device-width initial-scale=.85">
+	<meta name="yandex-verification" content="dc2a510944c5740b" />
+	<meta name="description" content="index" />
+	<script src="jquery.slim.min.js"></script>
+	<script src="scr1.js"></script>
+	<meta name="title" content="BUCKWHEAT MINDS">
+	<meta name="description" content="𝒄𝒍𝒊𝒄𝒌 𝒎𝒆 𝒕𝒐 𝒔𝒆𝒆 𝒄𝒐𝒏𝒕𝒆𝒏𝒕">
+	<meta name="url" content="https://so.bang.cl">
+	<meta name="image" content="assets/img/cover.jpg">
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:title" content="BUCKWHEAT MINDS">
+	<meta name="twitter:description" content="𝒄𝒍𝒊𝒄𝒌 𝒎𝒆 𝒕𝒐 𝒔𝒆𝒆 𝒄𝒐𝒏𝒕𝒆𝒏𝒕">
+	<meta name="twitter:site" content="https://so.bang.cl">
+	<meta name="twitter:image" content="assets/img/cover.jpg">
+	<meta property="oc:title" content="BUCKWHEAT MINDS">
+	<meta property="oc:description" content="𝒄𝒍𝒊𝒄𝒌 𝒎𝒆 𝒕𝒐 𝒔𝒆𝒆 𝒄𝒐𝒏𝒕𝒆𝒏𝒕">
+	<meta property="oc:url" content="https://so.bang.cl">
+	<meta property="oc:image:width" content="1600">
+	<meta property="oc:image:height" content="630">
+	<meta property="oc:image" content="assets/img/cover.jpg">
+</head>
+
+<body>
+	<center>
 		<div class="container">
 			<div class="text">
 				<header>
-					<div class="title"><h1>hello there</h1></div>	
-				<hr>
+					<div class="title">
+						<h1>hello there</h1>
+					</div>
+					<hr>
 				</header>
 				<div class="subtitle">
-				<big><a href="https://kisoqual.t.me/">РµС‡</a><a href="https://tx.me/s/kisoqual">РіСЂ</a><a href="https://t.me/s/kisoqual">РµС‡</a><a href="https://vk.com/kisoqual">ёСЃР</a><a href="https://soundcloud.com/kisoqual">РЅР</a><a href="https://kisoqual.bandcamp.com">РЅР</a><a href="https://mixcloud.com/kisoqual">РЅР</a><a href="https://twitter.com/buckwheatdata" title="twitter fandom is dying💀">µРІС</a><a href="https://x.com/buckwheatdata">µРІС</a><a href="https://fb.com/kisoqual">Р№</a><a href="https://youtube.com/kisoqual">’Р</a><a href="https://twitch.tv/kisoqual">’Р</a><a href="https://goodgame.ru/kisoqual">’Р</a><a href="https://coub.com/kitsuneknowledge">’Р</a><a href="https://flickr.com/sobacore">РіСЂ</a><a href="https://instagram.com/buckwheatdata">РіСЂ</a><a href="https://sketchfab.com/kisoqual">’Р</a><a href="https://github.com/kisoqual">ѕР</a><a href="https://kisoqual.itch.io">Рs</a><a href="https://gamejolt.com/@kisoqual">Рs</a><a href="https://gfycat.com/@kisoqual">ѕР</a><a href="https://codepen.io/kisoqual">»РЅР°</a><a href="https://sobacore.blogspot.com">»РЅР°</a><a href="portfolio">»РЅР°</a><!--a href="mailto:will@so.bang.cl"--><span class="txt1" title="unavailable">Р»Р</span><!--/a--><a href="mailto:sobacore@gmail.com">ѕР</a><a href="https://donationalerts.com/r/kisoqual">ѕР</a><a class="b00bsty-ex" title="in progress" href="cw1QPh" onclick="alert('no tiers available')">ѕР</a></big>
-				<br><br>
-				<label class="r1" title="click/tap me for arabic numbers or vice versa">
-					<b><i>MMX-MMXXV</i></b>
-				</label>
-				<i>rpe4ka</i>
-				<script src="mmxxv.js"></script>
-				<br><br>
-				—{░▒▓╫⁞≈¤<a class="point" href="assets/audio/00.ogg">◘</a>¤≈⁞╫▓▒░}—
-			</div>
-		</center>
-	</body>
+					<big><a href="https://kisoqual.t.me/">РµС‡</a><a href="https://tx.me/s/kisoqual">РіСЂ</a><a
+							href="https://t.me/s/kisoqual">РµС‡</a><a href="https://vk.com/kisoqual">ёСЃР</a><a
+							href="https://soundcloud.com/kisoqual">РЅР</a><a
+							href="https://kisoqual.bandcamp.com">РЅР</a><a
+							href="https://mixcloud.com/kisoqual">РЅР</a><a href="https://twitter.com/buckwheatdata"
+							title="twitter fandom is dying💀">µРІС</a><a href="https://x.com/buckwheatdata">µРІС</a><a
+							href="https://fb.com/kisoqual">Р№</a><a href="https://youtube.com/kisoqual">’Р</a><a
+							href="https://twitch.tv/kisoqual">’Р</a><a href="https://goodgame.ru/kisoqual">’Р</a><a
+							href="https://coub.com/kitsuneknowledge">’Р</a><a
+							href="https://flickr.com/sobacore">РіСЂ</a><a
+							href="https://instagram.com/buckwheatdata">РіСЂ</a><a
+							href="https://rpe4q.livejournal.com">РіСЂ</a><a
+							href="https://sketchfab.com/kisoqual">’Р</a><a href="https://github.com/kisoqual">ѕР</a><a
+							href="https://kisoqual.itch.io">Рs</a><a href="https://gamejolt.com/@kisoqual">Рs</a><a
+							href="https://gfycat.com/@kisoqual">ѕР</a><a href="https://codepen.io/kisoqual">»РЅР°</a><a
+							href="https://sobacore.blogspot.com">»РЅР°</a><a
+							href="portfolio">»РЅР°</a><!--a href="mailto:will@so.bang.cl"--><span class="txt1"
+							title="unavailable">Р»Р</span><!--/a--><a href="mailto:sobacore@gmail.com">ѕР</a><a
+							href="https://donationalerts.com/r/kisoqual">ѕР</a><a class="b00bsty-ex" title="in progress"
+							href="cw1QPh" onclick="alert('no tiers available')">ѕР</a></big>
+					<br><br>
+					<label class="r1" title="click/tap me for arabic numbers or vice versa">
+						<b><i>MMX-MMXXV</i></b>
+					</label>
+					<i>rpe4ka</i>
+					<script src="mmxxv.js"></script>
+					<br><br>
+					—{░▒▓╫⁞≈¤<a class="point" href="assets/audio/00.ogg">◘</a>¤≈⁞╫▓▒░}—
+				</div>
+	</center>
+</body>
+
 </html>
 
 <!-- SEE THE CONSOLE FOR MORE DETAILS 
