и li.ru тоже вернул

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 							href="https://flickr.com/sobacore">РіСЂ</a><a
 							href="https://instagram.com/buckwheatdata">РіСЂ</a><a
 							href="https://rpe4q.livejournal.com">РіСЂ</a><a
+							href="https://liveinternet.ru/users/4379025">’Р</a><a
 							href="https://sketchfab.com/kisoqual">’Р</a><a href="https://github.com/kisoqual">ѕР</a><a
 							href="https://kisoqual.itch.io">Рs</a><a href="https://gamejolt.com/@kisoqual">Рs</a><a
 							href="https://gfycat.com/@kisoqual">ѕР</a><a href="https://codepen.io/kisoqual">»РЅР°</a><a
