modified:   index.html

--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
 							href="https://gfycat.com/@kisoqual">ѕР</a><a href="https://codepen.io/kisoqual">»РЅР°</a><a
 							href="https://sobacore.blogspot.com">»РЅР°</a><a
 							href="portfolio">»РЅР°</a><!--a href="mailto:will@so.bang.cl"--><span class="txt1"
-							title="unavailable">Р»Р</span><!--/a--><a href="mailto:sobacore@gmail.com">ѕР</a><a
+							title="unavailable">Р»Р</span><!--/a--><a href="mailto:rpe4q@bk.ru">Рѕ</a><a
+							href="mailto:sobacore@gmail.com">ѕР</a><a
 							href="https://donationalerts.com/r/kisoqual">ѕР</a><a class="b00bsty-ex" title="in progress"
 							href="cw1QPh" onclick="alert('no tiers available')">ѕР</a></big>
 					<br><br>
