--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 							href="https://t.me/s/kisoqual">РµС‡</a><a href="https://vk.com/kisoqual">ёСЃР</a><a
 							href="https://soundcloud.com/kisoqual">РЅР</a><a
 							href="https://kisoqual.bandcamp.com">РЅР</a><a
-							href="https://mixcloud.com/kisoqual">РЅР</a><a href="https://twitter.com/buckwheatdata"
-							title="twitter fandom is dying💀">µРІС</a><a href="https://x.com/buckwheatdata">µРІС</a><a
+							href="https://mixcloud.com/kisoqual">РЅР</a><a href="https://twitter.com/rqe4ka"
+							title="twitter fandom is dying💀">µРІС</a><a href="https://x.com/rqe4ka">µРІС</a><a
 							href="https://fb.com/kisoqual">Р№</a><a href="https://youtube.com/kisoqual">’Р</a><a
 							href="https://twitch.tv/kisoqual">’Р</a><a href="https://goodgame.ru/kisoqual">’Р</a><a
 							href="https://coub.com/kitsuneknowledge">’Р</a><a
