--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 							href="https://fb.com/kisoqual">Р№</a><a href="https://youtube.com/kisoqual">’Р</a><a
 							href="https://twitch.tv/kisoqual">’Р</a><a href="https://goodgame.ru/kisoqual">’Р</a><a
 							href="https://coub.com/kitsuneknowledge">’Р</a><a
-							href="https://flickr.com/sobacore">РіСЂ</a><a
-							href="https://instagram.com/buckwheatdata">РіСЂ</a><a
+							href="https://flickr.com/sobacore">РіСЂ</a><a href="https://instagram.com/rqe4ka"
+							title="*Meta is an extremist organization in the Russian Federation">РіСЂ</a><a
 							href="https://rpe4q.livejournal.com">РіСЂ</a><a
 							href="https://liveinternet.ru/users/4379025">’Р</a><a
 							href="https://sketchfab.com/kisoqual">’Р</a><a href="https://github.com/kisoqual">ѕР</a><a
