--- a/index.html
+++ b/index.html
@@ -62,8 +62,10 @@
 							href="https://kisoqual.bandcamp.com">РЅР</a><a
 							href="https://mixcloud.com/kisoqual">РЅР</a><a href="https://twitter.com/rqe4ka"
 							title="twitter fandom is dying💀">µРІС</a><a href="https://x.com/rqe4ka">µРІС</a><a
-							href="https://fb.com/kisoqual">Р№</a><a href="https://youtube.com/kisoqual">’Р</a><a
-							href="https://twitch.tv/kisoqual">’Р</a><a href="https://goodgame.ru/kisoqual">’Р</a><a
+							href="https://fb.com/kisoqual"
+							title="*Meta is an extremist organization in the Russian Federation">Р№</a><a
+							href="https://youtube.com/kisoqual">’Р</a><a href="https://twitch.tv/kisoqual">’Р</a><a
+							href="https://goodgame.ru/kisoqual">’Р</a><a
 							href="https://coub.com/kitsuneknowledge">’Р</a><a
 							href="https://flickr.com/sobacore">РіСЂ</a><a href="https://instagram.com/rqe4ka"
 							title="*Meta is an extremist organization in the Russian Federation">РіСЂ</a><a
