--- a/neurocom/purplesazan.html
+++ b/neurocom/purplesazan.html
@@ -1,4 +1,6 @@
 <!doctype html>
 <html>
-  <meta http-equiv="refresh" content="0 data:text/html;base64,aHR0cHM6Ly9kaXNrLnlhbmRleC5ydS9pL1lTeVN4TkZzNnFwRmpB">
+  <body>
+    <meta http-equiv="refresh" content="0 data:text/html;base64,aHR0cHM6Ly9kaXNrLnlhbmRleC5ydS9pL1lTeVN4TkZzNnFwRmpB">
+  </body>
 </html>
