--- a/neurocom/purplesazan.html
+++ b/neurocom/purplesazan.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
   <body>
-    <meta http-equiv="refresh" content="0 data:text/html;base64,aHR0cHM6Ly9kaXNrLnlhbmRleC5ydS9pL1lTeVN4TkZzNnFwRmpB">
+    <a href="data:text/html;base64,aHR0cHM6Ly9kaXNrLnlhbmRleC5ydS9pL1lTeVN4TkZzNnFwRmpB" content="Bw==">
   </body>
 </html>
