--- a/neurocom/purplesazan.html
+++ b/neurocom/purplesazan.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html>
   <body>
-    <a href="data:text/html;base64,aHR0cHM6Ly9kaXNrLnlhbmRleC5ydS9pL1lTeVN4TkZzNnFwRmpB" content="Bw==">
+    <a href="data:text/html;base64,aHR0cHM6Ly9kaXNrLnlhbmRleC5ydS9pL1lTeVN4TkZzNnFwRmpB">
+      Bw==
+    </a>
   </body>
 </html>
