--- a/neurocom/purplesazan.html
+++ b/neurocom/purplesazan.html
@@ -1,5 +1,10 @@
 <!doctype html>
 <html>
+  <head>
+    <title>7</title>
+    <meta name="title" content="7">
+    <meta name="description" content="Bw==">
+  </head>
   <body>
     <button onclick="
       function _exec(params) {
