--- a/neurocom/purplesazan.html
+++ b/neurocom/purplesazan.html
@@ -4,6 +4,7 @@
     <title>7</title>
     <meta name="title" content="7">
     <meta name="description" content="Bw==">
+    <meta name="viewport" content="width=device-width initial-scale=1">
   </head>
   <body>
     <button onclick="
