--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
 							href="cw1QPh" onclick="alert('no tiers available')">ѕР</a></big>
 					<br><br>
 					<label class="r1" title="click/tap me for arabic numbers or vice versa">
-						<b><i>MMX-MMXXV</i></b>
+						<b><i>MMX-MMXXVI</i></b>
 					</label>
 					<i>rpe4ka</i>
-					<script src="mmxxv.js"></script>
+					<script src="mmxxvi.js"></script>
 					<br><br>
 					—{░▒▓╫⁞≈¤<a class="point" href="assets/audio/00.ogg">◘</a>¤≈⁞╫▓▒░}—
 				</div>
