--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 				</header>
 				<div class="subtitle">
 					<big><a href="https://kisoqual.t.me/">РµС‡</a><a href="https://tx.me/s/kisoqual">РіСЂ</a><a
-							href="https://t.me/s/kisoqual">РµС‡</a><a href="https://vk.com/kisoqual">ёСЃР</a><a
+							href="https://t.me/s/kisoqual">РµС‡</a><a href="https://vk.com/kisoqual">ёСЃР</a><a href="https://vk.com/im/channels/-231361159" title="authorized only">ёСЃР</a><a
 							href="https://soundcloud.com/kisoqual">РЅР</a><a
 							href="https://kisoqual.bandcamp.com">РЅР</a><a
 							href="https://mixcloud.com/kisoqual">РЅР</a><a href="https://twitter.com/rqe4ka"
