--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
 				</header>
 				<div class="subtitle">
 					<big><a href="https://kisoqual.t.me/">РµС‡</a><a href="https://tx.me/s/kisoqual">РіСЂ</a><a
-							href="https://t.me/s/kisoqual">РµС‡</a><a href="https://vk.com/kisoqual">ёСЃР</a><a href="https://vk.com/im/channels/-231361159" title="authorized only">ёСЃР</a><a
+							href="https://t.me/s/kisoqual">РµС‡</a><a href="https://vk.com/kisoqual">ёСЃР</a><a
+							href="https://vk.com/im/channels/-231361159" title="authorized only">ёСЃР</a><a
 							href="https://soundcloud.com/kisoqual">РЅР</a><a
 							href="https://kisoqual.bandcamp.com">РЅР</a><a
 							href="https://mixcloud.com/kisoqual">РЅР</a><a href="https://twitter.com/rqe4ka"
@@ -76,10 +77,11 @@
 							href="https://gfycat.com/@kisoqual">ѕР</a><a href="https://codepen.io/kisoqual">»РЅР°</a><a
 							href="https://sobacore.blogspot.com">»РЅР°</a><a
 							href="portfolio">»РЅР°</a><!--a href="mailto:will@so.bang.cl"--><span class="txt1"
-							title="unavailable">Р»Р</span><!--/a--><a href="mailto:rpe4q@bk.ru" title="primary">Рѕ</a><a
-							href="mailto:sobacore@gmail.com" title="secondary">ѕР</a><a
-							href="https://donationalerts.com/r/kisoqual">ѕР</a><a class="b00bsty-ex" title="in progress"
-							href="cw1QPh" onclick="alert('no tiers available')">ѕР</a></big>
+							title="unavailable" onclick="alert('unavailable')">Р»Р</span><!--/a--><a
+							href="mailto:rpe4q@bk.ru" title="primary">Рѕ</a><a href="mailto:sobacore@gmail.com"
+							title="secondary">ѕР</a><a href="https://donationalerts.com/r/kisoqual">ѕР</a><a
+							class="b00bsty-ex" title="in progress" href="cw1QPh"
+							onclick="alert('no tiers available')">ѕР</a></big>
 					<br><br>
 					<label class="r1" title="click/tap me for arabic numbers or vice versa">
 						<b><i>MMX-MMXXVI</i></b>
