--- a/index.html
+++ b/index.html
@@ -99,3 +99,5 @@
 <!-- SEE THE CONSOLE FOR MORE DETAILS 
     make sure your console drawer is opened
     http://so.bang.cl/assets/ -->
+
+<!-- and yeah, modals also probably will be there s00n -->
